--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     margin-top: 60px;
 
     background-color: black;
-    background-image: url('/Users/ricardo/Vinicola/img/vinicola.jpg');
+    background-image: url('img/vinicola.jpg');
     height: 200px;
     background-repeat: no-repeat;
     background-size: cover;
